<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/action_add"
        app:showAsAction="never"
        android:icon="@drawable/ic_add"
        android:orderInCategory="2"
        android:title="@string/menu_add" />
    <item
        android:id="@+id/action_delete"
        app:showAsAction="never"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="3"
        android:title="@string/menu_delete" />
</menu>